Agregar endpoint consulta de lineas
